cmake_minimum_required(VERSION 3.29)
project(DS_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(DS_2
        main26a2.cpp

        wet2util.h

        Huntech26a2.h
        Huntech26a2.cpp
        Hunter.h

        AvlRankTree.h
        AvlNode.h

        Union.h
        Union.cpp
        UnionNode.h
        UnionSquad.h
        RankAuraSquad.h
        UnionNode.cpp

)